syntax = "proto3";

option go_package = "gen/go/auth";

package auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);

}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}
message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string access_token = 2;
  string refresh_token = 3;
}

message LoginResponse {
  string token = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  bool valid = 1;
  int64 user_id = 2;
}

